fixed navbar z-index

--- a/src/pollutantPage.css
+++ b/src/pollutantPage.css
@@ -260,13 +260,14 @@ body.sound-panel-active .sound-icon span {
   flex-direction: column;
   align-items: center;
   transition: 0.4s ease-in-out;
-  z-index: 999;
+  z-index: 99 !important;
   overflow-y: hidden; /* Changed from auto to hidden */
 }
 
 .nav-menu.open {
   left: 0;
   overflow-y: auto; /* Only enable scrolling when open */
+  z-index: 99 !important;
 }
 
 /* Close Button */
